--- a/opex/android/app/src/main/AndroidManifest.xml
+++ b/opex/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rgcopex">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
    <application
         android:label="Sidra Teams"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <meta-data    android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCAagJLDQSlAv4j9d19yCzhD0MhAnSKS1E" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
