--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   equatable:
   loading_indicator: ^3.1.0
   mime_type: ^1.0.0
-  json_annotation:
+  json_annotation: ^4.8.1
   carousel_slider: ^4.1.1
   geocoding:
   geolocator:
@@ -102,16 +102,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons:
-  build_runner: ^2.2.0
-  json_serializable:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
  
 flutter_icons:
   android: true
   ios: true
   image_path: "asset/app_logo.png"
-
-  build_runner: ^2.2.0
-  json_serializable:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
