--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
-version: 1.0.4+11
+version: 1.0.4+12
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -93,8 +93,7 @@ dependencies:
   dartz: ^0.10.1
   loading_animation_widget: ^1.2.0+4
   sms_autofill: ^2.3.0
-  dots_indicator: ^3.0.0
-
+  flutter_spinkit: ^5.2.0
 
 
 
