--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
-version: 1.0.4+22
+version: 1.0.4+29
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -62,7 +62,6 @@ dependencies:
   dotted_border: ^2.0.0+2
   fluttertoast:
   flutter_carousel_slider:
-  optimized_cached_image:
   getwidget:
   intl: ^0.17.0
   file_picker:
@@ -99,6 +98,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
   cool_dropdown: ^2.1.0
+  avatar_stack: ^1.2.0
 
 dev_dependencies:
   flutter_test:
