--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
+# followed by an optional build number separated by a +.flutterEngine.getPlugins().add(new dev.fluttercommunity.plus.share.SharePlusPlugin());
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
-version: 1.0.4+29
+version: 1.0.10+38
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -74,7 +74,7 @@ dependencies:
   otp_text_field :
   syncfusion_flutter_datepicker :
   socket_io_client: 
-  flutter_ringtone_player: 3.2.0
+  flutter_ringtone_player: ^3.2.0
   advance_image_picker: ^0.1.7+1
   just_audio: ^0.9.11
   font_awesome_flutter: ^9.1.0
@@ -95,10 +95,13 @@ dependencies:
   connectivity_plus: ^5.0.1
   chat_bubbles:
   sticky_headers: ^0.3.0+2
-  carousel_slider: ^4.2.1
+  carousel_slider: ^4.0.0
   flutter_rating_bar: ^4.0.1
   cool_dropdown: ^2.1.0
   avatar_stack: ^1.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -107,6 +110,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   animated_text_kit: ^4.2.2
+  hive_generator: ^2.0.1
  
 flutter_icons:
   android: true
