--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
-version: 1.0.10+38
+version: 1.0.10+37
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -101,6 +101,11 @@ dependencies:
   hive_flutter: ^1.1.0
   image_cropper: ^4.0.0
   image_picker: ^0.8.6+1
+  appinio_video_player: ^1.2.2
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^16.3.0
+
 
 dev_dependencies:
   flutter_test:
@@ -110,6 +115,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   animated_text_kit: ^4.2.2
   hive_generator: ^2.0.1
+
  
 flutter_icons:
   android: true
