--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
 
-version: 1.0.14+46
+version: 1.0.15+47
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -68,6 +68,7 @@ dependencies:
   getwidget:
   intl: ^0.17.0
   file_picker:
+  flutter_image_compress: ^2.1.0
   share_plus: ^6.3.0
   carousel_indicator:
   syncfusion_flutter_charts:
