--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
 
-version: 1.0.14+44
+version: 1.0.16+48
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -110,6 +110,7 @@ dependencies:
   appinio_video_player: ^1.2.2
   firebase_core: ^2.24.2
   upgrader:
+  # awesome_dialog: ^3.2.0
 
 dev_dependencies:
   flutter_test:
