--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -113,6 +113,7 @@ dependencies:
   upgrader:
   calendar_date_picker2: ^0.5.3
   day_night_time_picker: ^1.3.0+1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
