--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts:
   persistent_bottom_nav_bar: ^5.0.2
   another_flushbar: ^1.12.30
+  top_snackbar_flutter: ^3.1.0
   double_back_to_close_app:
   internet_connection_checker:
   provider:
@@ -109,6 +110,7 @@ dependencies:
   image_picker: ^0.8.6+1
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^16.3.0
+  flutter_keyboard_visibility: ^6.0.0
   appinio_video_player: ^1.2.2
   firebase_core: ^2.24.2
   upgrader:
@@ -118,6 +120,10 @@ dependencies:
   animated_emoji: ^3.0.0
   status_alert: ^1.0.1
   flutter_linkify: ^6.0.0
+  blurrycontainer: ^1.0.2
+  gallery_saver: ^2.3.2
+  image_gallery_saver: ^2.0.3
+  android_path_provider: ^0.3.0
 
 dev_dependencies:
   flutter_test:
