--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versi ons while build-number is used as the build suffix.
 
-version: 1.0.24+56
+version: 1.0.26+58
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -56,6 +56,7 @@ dependencies:
   mime_type: ^1.0.0
   json_annotation: ^4.8.1
   flutter_swipe_action_cell: ^3.1.3
+  onesignal_flutter: ^3.5.1
   geocoding:
   geolocator:
   google_maps_flutter:
