--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -125,6 +125,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   android_path_provider: ^0.3.0
   animated_icon: ^0.0.6
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   flutter_test:
