--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_swipe_action_cell: ^3.1.3
   onesignal_flutter: ^3.5.1
+  universal_platform: ^1.0.0+1
   geocoding:
   geolocator:
   google_maps_flutter:
@@ -76,6 +77,7 @@ dependencies:
   share_plus: ^6.3.0
   carousel_indicator:
   syncfusion_flutter_charts:
+
   charts_flutter:
   flutter_countdown_timer :
   otp_text_field :
