--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_swipe_action_cell: ^3.1.3
   onesignal_flutter: ^3.5.1
+  http:
   universal_platform: ^1.0.0+1
   geocoding:
   geolocator:
