--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.28+60
 
 environment:
-  sdk: '>=2.17.3 <3.0.0'
+  sdk: '>=2.17.3 <3.2.5'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -54,7 +54,7 @@ dependencies:
   loading_indicator: ^3.1.0
   flutter_easyloading: ^3.0.5
   mime_type: ^1.0.0
-  json_annotation: ^4.8.1
+
   flutter_swipe_action_cell: ^3.1.3
   onesignal_flutter: ^3.5.1
   http:
@@ -93,7 +93,8 @@ dependencies:
   video_player: ^2.5.1
   chewie:
   url_launcher: ^6.1.9
-  voice_message_package: ^1.0.41
+  voice_message_package: ^2.1.0
+
   animated_splash_screen:
   mime:
   http_parser :
@@ -108,6 +109,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   cool_dropdown: ^2.1.0
   avatar_stack: ^1.2.0
+  clipboard:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_cropper: ^4.0.0
@@ -116,7 +118,7 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   flutter_keyboard_visibility: ^6.0.0
   appinio_video_player: ^1.2.2
-  firebase_core: ^2.24.2
+  firebase_core:
   upgrader:
   calendar_date_picker2: ^0.5.3
   day_night_time_picker: ^1.3.0+1
@@ -137,6 +139,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons:
   build_runner: ^2.4.6
+  json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   animated_text_kit: ^4.2.2
   hive_generator: ^2.0.1
