--- a/opex/pubspec.yaml
+++ b/opex/pubspec.yaml
@@ -94,6 +94,8 @@ dependencies:
   chewie:
   url_launcher: ^6.1.9
   voice_message_package: ^2.1.0
+  firedart: ^0.9.8
+  xid: ^1.1.2
 
   animated_splash_screen:
   mime:
